# multi-agent-paper-review

./: .gitignore  PLAN.md  README.md  pyproject.toml
.cursor/skills/eval-notebook-style/: SKILL.md  labels.md  palette.md  titles.md  typography.md
dataset/: eval_sample_30.json  sample_eval_set.ipynb
eval/: batch.md  batches.json  estimate.py  experiments.py  metrics.md  prices.json  smoke.py
eval/analysis/: _apply_conventions.py  _execute_notebooks.py  full_comment_recall.ipynb  full_cost.ipynb  full_delegation.ipynb  full_diversity.ipynb  full_spearman.ipynb  full_win_rate.ipynb  pilot_win_rate.ipynb
eval/batches/: pilot.json
eval/metrics/: base.py  batch.py  comment_recall.py  cost.py  diversity.py  metric1_win_rate.py  rubric.py  spearman.py  win_rate.py
eval/outputs/20260622T103210Z/: final_review.md  review.json  trace.jsonl
eval/prompts/: comment_recall.py  win_rate.py
eval/results/full/: cost.json  diversity.json  spearman.json
eval/tests/: conftest.py  test_batch.py  test_comment_recall.py  test_cost.py  test_diversity.py  test_experiments.py  test_spearman.py  test_spec.py  test_win_rate.py
eval/utils/: batch.py  cli.py  llm.py  prices.py  results.py  run_set.py  spec.py  stats.py
review_agent/: .env.example
review_agent/src/: __init__.py
review_agent/src/agents/: __init__.py  prompt_loader.py  reviewer.py
review_agent/src/tests/: test_prompt_loader.py  test_review_parser.py  test_review_trace_listener.py  test_reviewer.py  test_trace_logger.py
review_agent/src/utils/: __init__.py  openrouter.py  review_parser.py  role_labels.py  (+2 more)
(+843 files in other folders)
