[tool.poetry]
name = "multi-agent-peer-review"
version = "0.1.0"
description = "Multi-agent LLM peer review research project"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
crewai = "1.14.6"
python-dotenv = "1.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.3"

[tool.poetry.group.notebook]
optional = true

[tool.poetry.group.notebook.dependencies]
ipykernel = "^6.29"
jupyter = "^1.1"
pandas = "^2.2"

[tool.poetry.group.eval]
optional = true

[tool.poetry.group.eval.dependencies]
pandas = "^2.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["review_agent"]
testpaths = ["review_agent/src/tests"]
